# solana-token-launchpad

./: .gitmodules  README.md  package-lock.json  package.json  tailwind.config.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/attestation/: route.ts
src/app/api/auth/login/: route.ts
src/app/api/projects/: route.ts
src/app/api/seed/: route.ts
src/app/create-token/: page.tsx
src/app/distributions/: page.tsx
src/app/token-sales/: page.tsx
src/app/verify/: page.tsx
src/components/: AttestationIssuer.tsx  ClientOnly.tsx  CreateTokenForm.tsx  CreateTokenSaleForm.tsx  Navigation.tsx  UserDashboard.tsx  UserOnboarding.tsx  WalletButton.tsx  WalletProvider.tsx
src/components/ui/: checkbox.tsx  input.tsx  select.tsx
src/hooks/: useTokenSaleProgram.ts
src/lib/: mongodb.ts  seedData.ts  utils.ts
src/models/: Attestation.ts  Investment.ts  Project.ts  Proposal.ts  User.ts
src/services/: attestationService.ts  solana.ts  tokenSaleProgram.ts  verification.ts
src/store/: useTokenStore.ts  useWalletStore.ts
src/types/: token_sale_program.ts
token-sale-program/: .gitignore  Anchor.toml  package.json  tsconfig.json
token-sale-program/programs/token-sale-program/: Cargo.toml
token-sale-program/programs/token-sale-program/src/: lib.rs
token-sale-program/tests/: token-sale-program.ts
