[package]
name = "token-sale-program"
version = "0.1.0"
description = "Token sale program for Solana token launch platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_sale_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = { version = "0.31.0", features = ["token", "associated_token"] }

